added the sports schedules to the features and have them set up to be updated in the sidebar when the feature is clicked

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
         <div id="name">&nbsp;</div>
         <img id="feature-image" src="" alt="" style="max-width: 100%; display: none;">
         <div id="info">&nbsp;</div>
+        <div id="events">&nbsp;</div> </div>
     </div>
 
     <!-- Map container -->
