attempt 1 at getting images to show up on deploy

--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,9 @@
     <!-- Popup for showing feature name on hover -->
     <div id="popup" class="popup"></div>
 
+    <img className="w-8" src="assets/images/soccerField.png" />
+
+
     <script type="module" src="main.js"></script>
 
     <script>
