--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,8 @@
     <div id="popup" class="popup"></div>
 
     <img className="w-8" src="assets/images/soccerField.png" />
+    <img className="w-8" src="assets/images/stadium.png" />
+    <img className="w-8" src="assets/images/tennis.png" />
 
 
     <script type="module" src="main.js"></script>
