converting from webp to png

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     <img className="w-8" src="assets/images/soccerField.png" />
     <img className="w-8" src="assets/images/stadium.png" />
     <img className="w-8" src="assets/images/tennis.png" />
-    <img className="w-8" src="assets/images/soccerSidebar.webp" />
+    <img className="w-8" src="assets/images/soccerSidebar.png" />
     <img className="w-8" src="assets/images/stadiumSidebar.webp" />
     <img className="w-8" src="assets/images/tennisSidebar.webp" />
 
