convert the other webp to png

--- a/app/index.html
+++ b/app/index.html
@@ -26,8 +26,8 @@
     <img className="w-8" src="assets/images/stadium.png" />
     <img className="w-8" src="assets/images/tennis.png" />
     <img className="w-8" src="assets/images/soccerSidebar.png" />
-    <img className="w-8" src="assets/images/stadiumSidebar.webp" />
-    <img className="w-8" src="assets/images/tennisSidebar.webp" />
+    <img className="w-8" src="assets/images/stadiumSidebar.png" />
+    <img className="w-8" src="assets/images/tennisSidebar.png" />
 
     <script type="module" src="main.js"></script>
 
