--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <!-- Popup for showing feature name on hover -->
     <div id="popup" class="popup"></div>
 
-    <img className="w-8" src="assets/images/soccerField.png" />
-    <img className="w-8" src="assets/images/stadium.png" />
-    <img className="w-8" src="assets/images/tennis.png" />
-    <img className="w-8" src="assets/images/soccerSidebar.png" />
-    <img className="w-8" src="assets/images/stadiumSidebar.png" />
-    <img className="w-8" src="assets/images/tennisSidebar.png" />
+    <img className="w-8" src="./assets/images/soccerField.png" />
+    <img className="w-8" src="./assets/images/stadium.png" />
+    <img className="w-8" src="./assets/images/tennis.png" />
+    <img className="w-8" src="./assets/images/soccerSidebar.png" />
+    <img className="w-8" src="./assets/images/stadiumSidebar.png" />
+    <img className="w-8" src="./assets/images/tennisSidebar.png" />
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="./main.js"></script>
 
     <script>
         // Function to open the sidebar
