add a search bar at the top middle of the screen

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="node_modules/ol/ol.css">
 </head>
 <body>
+    <!-- Search box to find features -->
+    <div id="search-container">
+        <input type="text" id="location-input" placeholder="Search for a location...">
+        <button id="search-button">Search</button>
+    </div>
+
     <!-- Sidebar to show feature info -->
     <div class="sidebar" id="sidebar">
         <span class="closebtn" onclick="closeNav()">×</span>
