added a class schedule box to the map and hardcoded the logic for now

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
     <!-- Popup for showing feature name on hover -->
     <div id="popup" class="popup"></div>
 
+     <!-- Class Schedule Box -->
+     <div id="class-schedule">
+        <h3>Your Class Schedule</h3>
+        <div id="schedule-content">
+            <!-- Class schedule content will go here -->
+        </div>
+    </div>
+
     <script type="module" src="./main.js"></script>
 
     <script>
