--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="search-container">
         <input type="text" id="location-input" placeholder="Search for a location...">
         <button id="search-button">Search</button>
+        <div id="location-dropdown"></div>
     </div>
 
     <!-- Sidebar to show feature info -->
