--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <div id="events">&nbsp;</div> </div>
     </div>
 
+    <button id="current-location-btn">Go to Current Location</button>
+
     <!-- Map container -->
     <div id="map" class="map"></div>
 
