--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="sidebar" id="sidebar">
         <span class="closebtn" onclick="closeNav()">×</span>
         <div id="name">&nbsp;</div>
-        <img id="feature-image" src="" alt="" style="max-width: 100%; display: none;">
+        <img id="feature-image" src="" alt="" style="max-width: 100%;">
         <div id="info">&nbsp;</div>
         <div id="events">&nbsp;</div> </div>
     </div>
